--- a/config/bursty.toml
+++ b/config/bursty.toml
@@ -1,12 +1,12 @@
 [stress]
-burst_count_min=3
-burst_count_incr=2
-burst_size_min=20
-burst_size_incr=10
-burst_interval=0.1
-inter_burst_interval=6
-restart_delay=30
+bursts_per_loop_min=3
+bursts_per_loop_incr=2
+requests_per_burst_min=20
+requests_per_burst_incr=10
+request_delay=0.1
+burst_delay=6
+loop_delay=30
 loop_count=4
-memory_measurement_interval=0.5
+memory_measurement_delay=0.5
 wait_for_bursts_to_complete=true
 payload_path="payload/light.graphql"
