--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==19.3.0
 backcall==0.2.0
 certifi==2019.9.11
 cffi==1.13.2
+chardet==3.0.4
 croniter==0.3.31
 cryptography==2.8
 cycler==0.10.0
@@ -50,6 +51,8 @@ ruamel.yaml.clib==0.2.0
 Rx==1.6.1
 six==1.13.0
 SQLAlchemy==1.3.11
+toml==0.10.2
+toml-config==0.1.3
 traitlets==5.0.5
 urllib3==1.25.7
 wcwidth==0.1.7
