--- a/config/bursty_wait.toml
+++ b/config/bursty_wait.toml
@@ -4,9 +4,9 @@ bursts_per_loop_incr = 0
 requests_per_burst_min = [16, 8, 4, 2]
 requests_per_burst_incr = 0
 request_delay = 0.2
-burst_delay = 2
+burst_delay = 0
 loop_delay = 20
 loop_count = 4
 measurement_delay = 0.5
-wait_for_bursts_to_complete = false
+wait_for_bursts_to_complete = true
 payload_path = "payload/light.graphql"
