--- a/config/single/4-16.toml
+++ b/config/single/4-16.toml
@@ -1,12 +1,12 @@
 [stress]
-bursts_per_loop_min = [2,2,2,2]
+bursts_per_loop_min = [4]
 bursts_per_loop_incr = 0
-requests_per_burst_min = [32,32,32,32]
+requests_per_burst_min = [16]
 requests_per_burst_incr = 0
 request_delay = 0.2
-burst_delay = 2
+burst_delay = 4
 loop_delay = 20
-loop_count = 2
+loop_count = 1
 measurement_delay = 0.5
-wait_for_bursts_to_complete = false
+wait_for_bursts_to_complete = true
 payload_path = "payload/light.graphql"
