--- a/config/2-32.toml
+++ b/config/2-32.toml
@@ -1,12 +1,16 @@
 [stress]
 bursts_per_loop_min = [2,2,2,2]
 bursts_per_loop_incr = 0
-requests_per_burst_min = [32,32,32,32]
-requests_per_burst_incr = 0
+mutations_per_burst_min = [32,32,32,32]
+mutations_per_burst_incr = 0
 request_delay = 0.2
 burst_delay = 2
 loop_delay = 20
-loop_count = 2
+loop_count = 4
 measurement_delay = 0.5
 wait_for_bursts_to_complete = false
 payload_path = "payload/light.graphql"
+read_payload_path = "payload/read.graphql"
+use_read_loop = true
+read_delay = 0.1
+kill_read_delay = 120000
