--- a/config/8-8.toml
+++ b/config/8-8.toml
@@ -1,8 +1,8 @@
 [stress]
 bursts_per_loop_min = [8,8,8,8]
 bursts_per_loop_incr = 0
-requests_per_burst_min = [8,8,8,8]
-requests_per_burst_incr = 0
+mutations_per_burst_min = [8,8,8,8]
+mutations_per_burst_incr = 0
 request_delay = 0.2
 burst_delay = 2
 loop_delay = 20
