--- a/config/bursty-heavy.toml
+++ b/config/bursty-heavy.toml
@@ -1,8 +1,8 @@
 [stress]
 bursts_per_loop_min = [2, 4, 8, 16]
 bursts_per_loop_incr = 0
-requests_per_burst_min = [16, 8, 4, 2]
-requests_per_burst_incr = 0
+mutations_per_burst_min = [16, 8, 4, 2]
+mutations_per_burst_incr = 0
 request_delay = 0.1
 burst_delay = 2
 loop_delay = 20
@@ -10,3 +10,5 @@ loop_count = 4
 measurement_delay = 0.5
 wait_for_bursts_to_complete = false
 payload_path = "payload/heavy.graphql"
+read_payload_path = "payload/read.graphql"
+read_delay = 0.1
