--- a/config/bursty.toml
+++ b/config/bursty.toml
@@ -1,12 +1,15 @@
 [stress]
 bursts_per_loop_min = [2, 4, 8, 16]
 bursts_per_loop_incr = 0
-requests_per_burst_min = [16, 8, 4, 2]
-requests_per_burst_incr = 0
+mutations_per_burst_min = [16, 8, 4, 2]
+mutations_per_burst_incr = 0
 request_delay = 0.2
 burst_delay = 2
-loop_delay = 20
+loop_delay = 30
 loop_count = 4
 measurement_delay = 0.5
 wait_for_bursts_to_complete = false
 payload_path = "payload/light.graphql"
+read_payload_path = "payload/read.graphql"
+read_delay = 0.1
+use_read_loop = true
