--- a/config/bursty_wait.toml
+++ b/config/bursty_wait.toml
@@ -1,8 +1,8 @@
 [stress]
 bursts_per_loop_min = [2, 4, 8, 16]
 bursts_per_loop_incr = 0
-requests_per_burst_min = [16, 8, 4, 2]
-requests_per_burst_incr = 0
+mutations_per_burst_min = [16, 8, 4, 2]
+mutations_per_burst_incr = 0
 request_delay = 0.2
 burst_delay = 0
 loop_delay = 20
