--- a/config/single/2-32.toml
+++ b/config/single/2-32.toml
@@ -1,8 +1,8 @@
 [stress]
 bursts_per_loop_min = [2]
 bursts_per_loop_incr = 0
-requests_per_burst_min = [32]
-requests_per_burst_incr = 0
+mutations_per_burst_min = [32]
+mutations_per_burst_incr = 0
 request_delay = 0.2
 burst_delay = 4
 loop_delay = 20
